--- a/css/form.css
+++ b/css/form.css
@@ -10,18 +10,14 @@ body{
 
 
 .login-box{
-    width: 320px;
+    width: 800px;
     height: 800;
-    /*background-color: #bf70e6;  
-    color: #E6D470;*/
-
-    background-color: black;  
-    color: #fff;
-
-    top: 65%;
-    left: 65%;
+    background-color: rgb(57, 114, 136);  
+    color: rgb(236, 238, 146);
+    top: 55%;
+    left: 60%;
     position: absolute;
-    transform: translate(-65%, -65%);   /*op*/
+    transform: translate(-65%, -65%); 
     box-sizing: border-box;
     padding: 100px 100px;
 
@@ -32,11 +28,42 @@ body{
 
 .login-box .avatar{
     width: 300px;
-    height: 300;
-    border-radius: 65%;
+    height: 800px;
+    border-radius: 50%;
     position: absolute;
-    top: -5%;
-    left: calc(50%, -50px);
+    top: -35%;                      /*ariba abajo, del logo*/
+    left: calc(-45% - -40px);       
 
 
 }
+
+
+.login-box h1{
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: left;
+    font-size: 45px;
+}
+
+
+.login-box label{
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    display: block;
+}
+
+
+
+.login-box input{
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+
+
+.login-box input[type="text"],
+.login-box input[type="email"],
+.login-box input[type="password"]
+
+
